--- a/phil971-kant-rational-agency.org
+++ b/phil971-kant-rational-agency.org
@@ -74,11 +74,97 @@ Kant's conception of reason.
 
    + The metaphysical status of the agent (substance vs. bundle)
    + Epistemic access to one’s capacities 
-
+   
+*** Logistics: Assignments
+**** Precis
+- hand in via email by seminar time
+- mention issue of audience
+   + audience could be ‘philosophers’ by that usually won’t be very helpful so…
+      - specialists vs non-specialists
+      - one position vs another (e.g. compatiblists or incompatibilists), and why
+        (defusing an objection; or making a devastating criticism)
+- maybe add page number references when summarizing claims made in paper
+  
+**** Reading response
+- Send via listserv 
+- Send by Monday 8 pm CST
+     
+  
 *** Agents & Powers
 - Note the way in which Kant’s conception of a substance is modally suffused or inflected
 - Note the issue of power vs. capacity vs. faculty
 
+
+*** Reading responses
+
+**** Eunhong
+- Kant assumes that all casuality is sufficient causality – but why assume this? 
+- 
+**** John
+#+begin_quote
+why claim that the “conditioned” is not a subject matter of transcendental criticism
+when the very validation of said concept is grounded on the phenomena, out from which
+analyticity seems established. Isn’t this precisely the job of transcendental
+criticism?
+#+end_quote
+
+- the concept <conditioned> analytically entails <condition>; so the very claim about
+  the conditioned being given also gives its conditions is not something to which
+  Kant objects. Hence no fear of transncendental criticism.
+
+ The concept thus isn’t “established” by an appeal to phenomena (or appaearances)
+
+#+begin_quote
+it seems to me that Kant takes freedom and necessity as contradiction – i.e., the
+demonstration of one must occasion the negation of the other (Alison 394). Why?
+#+end_quote
+
+- OK good - but first, why think that Kant endorses this opposition? And if he does
+  what justification might there be for it?
+- John makes a further point but I didn’t understand it
+  
+
+**** Chen
+#+begin_quote
+My question here is, does this mean [i.e. the separation of natural and free/intelligible
+causality] that acting subjects have the same power of choice so they will make the
+same decision under one circumstance? Or, if subjects will make different decisions
+based on their previous experiences, how could Kant separate freedom from natural
+causality completely? (Maybe Kant is not faced with such questions?)
+#+end_quote
+
+- Seems like this question might be answered by looking at the difference between
+  intelligible and empirical character
+
+**** Janelle
+- NO Response
+
+**** Trevor
+#+begin_quote
+I was always taught that Kant believes the world as it appears to us seems to have
+causation but we don’t know whether things-in-themselves are in such law-like causal
+relations. So why doesn’t Kant just admit that things-in-themselves may be free even
+if all appearances and reasoning about appearances seem to suggest otherwise?
+#+end_quote
+
+- Question for Trevor: Is free action supposed to be non-deterministic? 
+
+#+begin_quote
+it strikes me as weird he is even talking about incompatibilism if we aren’t even aware of the true nature of things
+#+end_quote
+
+- Why talk about incompatibilism if we cannot know anything about things in
+  themselves? 
+
+#+begin_quote
+if we are ignorant of our own nature, isn’t it possible that once we are “wound up”
+so-to-speak we are then able to truly determine what happens? Put it another way, the
+turnspit is wound up and then has the power of movement. Perhaps once we are “wound
+up” we have a true two-way power, to cause either event A or event B.
+#+end_quote
+
+- OK - so what is it to “truly determine what happens”? 
+- But fair question: why think we have anything more than ‘relative spontaneity’?
 * Website
 ** Pages
 :PROPERTIES:
@@ -316,7 +402,7 @@ to read the specified pages.
      
 
 
-*** DRAFT Week 3 – Freedom & Control
+*** DONE Week 3 – Freedom & Control
 SCHEDULED: <2020-09-01 Tue>
 :PROPERTIES:
 :EXPORT_HUGO_TAGS: action agency causality control freedom 
@@ -326,28 +412,30 @@ SCHEDULED: <2020-09-01 Tue>
 Last week we started talking about Kant’s conception of free action. This week we’ll
 try and get clearer as to the notion of ‘control’ that lies behind this conception of
 free action. In terms of readings from Kant we’ll be focusing on much of the same
-material. 
+material from last week plus a few other things. 
 
 I want to focus our discussion around the following questions:
 
 1. Is Kant’s conception of absolute spontaneity made more intelligible by appeal to
    his view of control? 
 2. What is the connection, for Kant, between control and responsibiilty?
-3. If rational acts are all and only those that are under one’s control, how does
-   Kant avoid (if he does) an implausibly voluntaristic position?
+3. Does control require choice?
+4. If rational acts are all and only those that are under one’s control, and control
+   is dependent on choice how does Kant avoid (if he does) an implausibly
+   voluntaristic position?
 
 **** Readings
 - Kant:
-   + /Groundwork of the Metaphysics of Morals/: II, 4:412-4:414; III, 4:446-9
+   + /Groundwork of the Metaphysics of Morals/: part II, 4:412-4:414; part III, 4:446-9
    + /[[/materials/readings/kant-review-schulz.pdf][Review of Schultz]]/
       - Read the whole thing, but focus on the argument starting from the first full
         paragraph on 8:13 to the end. 
-   + /Critique of Practical Reason/: 5:94-100 
+   + /Critique of Practical Reason/: 5:94-101 
 - Secondary readings:
-   + McLear, [[https://www.dropbox.com/s/4pp80jgue6mejwh/control.pdf?dl=0]["Control"]]
    + Kohl, "[[/materials/readings/kohl-kant-free-thought.pdf][Kant on Freedom of Empirical Thought]]"
    + Cohen, “[[/materials/readings/cohen-dox.pdf][Kant on Doxastic Voluntarism and its Implications for Epistemic Responsibility]]”
-   + Korsgaard, “[[/materials/readings/korsgaard-self-constitution.pdf][Self-Constitution in the Ethics of Plato and Kant]]”
+   + (Optional) McLear, [[https://www.dropbox.com/s/4pp80jgue6mejwh/control.pdf?dl=0]["Control"]]
+   + (Optional) Korsgaard, “[[/materials/readings/korsgaard-self-constitution.pdf][Self-Constitution in the Ethics of Plato and Kant]]”
      
   
      
