--- a/phil971-kant-rational-agency.org
+++ b/phil971-kant-rational-agency.org
@@ -578,7 +578,7 @@ I want to focus our discussion around the following questions:
 # Feldman or Audi papers? What about Hieronymi? Korsgaard on self-constitution?
 
   
-*** DONE Week 4 – Reflection, Inference & Agency
+*** DONE Week 4 – Reflection, Inference, & Agency
 SCHEDULED: <2020-09-08 Tue>
 :PROPERTIES:
 :EXPORT_HUGO_TAGS: action agency animals control inference reasoning 
@@ -595,7 +595,7 @@ Kant’s own view. The second, by Paul Boghossian, is on the “taking condition
 account of inference. 
 
 **** Readings
-- Kant (most of these are the same as last week)
+- Kant (these are the same as last week)
    + /Groundwork of the Metaphysics of Morals/: part II, 4:412-4:414; part III, 4:446-9
    + /[[/materials/readings/kant-review-schulz.pdf][Review of Schultz]]/
       + Read the whole thing, but focus on the argument starting from the first full
